--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="headert-container">
             <div class="header-center">
-                <div class="header-logo">∞UNRMTDDT∞(送信などはご遠慮ください)</div>
+                <div class="header-logo">∞UNRMTDDT∞</div>
             </div>
             <div class="header-right">
                 <a href="#" class="login">ログイン</a>
